--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,23 @@
 {
-  "name": "Gerenciador Favoritos",
-  "short_name": "FavManager",
+  "name": "LinkUp Favoritos",
+  "short_name": "LinkUp",
+  "description": "Gerenciador de favoritos minimalista acionado por voz.",
   "start_url": "index.html",
   "display": "standalone",
-  "background_color": "#f1f5f9",
+  "background_color": "#f8fafc",
   "theme_color": "#2563eb",
   "icons": [
     {
       "src": "icon-192.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
       "src": "icon-512.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any"
     }
   ]
 }
